--- a/app/hugo.toml
+++ b/app/hugo.toml
@@ -4,7 +4,7 @@ defaultContentLanguage = "en"
 disableKinds = ["taxonomy"]
 enableRobotsTXT = true
 languageCode = "en"
-timeZone = "Asia/Manila"
+# timeZone = "Asia/Manila"
 timeout = "120s"
 title = "Mark Taguiad"
 theme = 'gallery'
